base/grouper/grouper-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grouper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grouper
  template:
    metadata:
      labels:
        app: grouper
    spec:
      containers:
      - name: grouper
        image: docker.io/i2incommon/grouper:7.1.0
        imagePullPolicy: Always
        resources:
          limits:
            memory: 4Gi
            cpu: 4
          requests:
            memory: 1Gi
            cpu: 1
        args:
          - ui
        ports:
          - containerPort: 8443
            protocol: TCP
            name: https
