base/grouper/grouper-service.yml
apiVersion: v1
kind: Service
metadata:
  name: grouper
  labels:
    name: grouper
spec:
  ports:
  - name: https
    nodePort: 0
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    app: grouper
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
