base/grouper/grouper-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    template.openshift.io/expose-uri: https://{.spec.host}{.spec.path}
  name: grouper
spec:
  #path: /grouper
  to:
    kind: Service
    name: grouper
  port:
    targetPort: https
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
